<resources>
    <string name="app_name">Eventos Compartidos</string>
    <string name="request_id_token">787108151618-uvmkm7nqao90csgngrtc2l1vfnhqikto.apps.googleusercontent.com</string>

    <string name="signUp">Sign Up</string>
    <string name="logIn">Login</string>
    <string name="logInGoogle">Login con Google</string>
    <string name="userName">UserName</string>
    <string name="password">Password</string>
    <string name="repetPassword">Repet Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="emptyCamps">Complete all fields</string>
    <string name="samePassword">The Passwords not coincide</string>
    <string name="phoneNotCorrect">The Phone format is not correct</string>

    <string name="ERROR">ERROR</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="delete">Delete</string>
    <string name="deleteThisEvent">Delete this Event?</string>
    <string name="deleteThisOpinion">Delete this Coment?</string>
    <string name="deleteThisUser">Delete this User?</string>
    <string name="kickThisUser">Kick  this User?</string>
    <string name="addUser">Add User?</string>
    <string name="ocurridoErrorAutenticacion">Se ha producido un error autenticando al usuairo</string>
    <string name="SignUpSuscesfull">SignUp Suscesfull</string>
    <string name="Suscesfull">Suscesfull</string>


    <string name="UserNotActivated">Your profile will be activated soon</string>
    <string name="title_activity_activated_user_home">ActivatedUserHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="changePassword">Change Password</string>

    <string name="asistentesEvento">Attendees to the event</string>
    <string name="nuevoEvento">New event</string>
    <string name="asistToTheEvent">Sign up for the event?</string>
    <string name="editEvent">Edit event?</string>
    <string name="editEventAsistant">Edit event attend?</string>
    <string name="disapointEvent">Cancel attendance?</string>
    <string name="edit">Edit?</string>
    <string name="nameEvento">Event Name...</string>
    <string name="Date">Date</string>
    <string name="Hour">Hour</string>
    <string name="location">Location</string>
    <string name="changeLocation">Change location</string>
    <string name="noAsiste">No asiste</string>

    <string name="chosePhoto">Chose phote</string>
    <string name="strMensajeElegirFoto">How do you want to add the photo?</string>
    <string name="changeActivateUser">Change user Activated Mode?</string>
    <string name="Activated">Activated</string>
    <string name="Disabled">Disabled</string>
    <string name="change">Change</string>
    <string name="strCamara">Camera</string>
    <string name="strGaleria">Gallery</string>
    <string name="addPhoto">Add Photo</string>
    <string name="addLocation">Add Location</string>
    <string name="confirmArrival">Confirm Arrival</string>
    <string name="files">Files</string>
    <string name="confirmSelection">Confirm Selection</string>


    <string name="satellite_mode">Satellite Mode</string>
    <string name="normal_mode">Normal Mode</string>
    <string name="hybrid_mode">Hybrid Mode</string>

    <string name="admin_mode">Admin Mode</string>
    <string name="user_mode">User Mode</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="my_events">My Events</string>
    <string name="all_events">All Events</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_tabbed">AdminTabbedActivity</string>
    <string name="tab_users">Users</string>
    <string name="tab_events">Events</string>
    <string name="title_activity_admin_nav_draw">AdminNavDrawActivity</string>
    <string name="title_activity_admin_nav_home">AdminNavHomeActivity</string>
    <string name="title_activity_admin_tabb">AdminTabbActivity</string>
    <string name="title_activity_maps_confirm_arrival">MapsConfirmArrivalActivity</string>
    <string name="title_activity_maps_opinion">MapsOpinionActivity</string>
    <string name="title_activity_opiniones_bot_nav">OpinionesBotNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>