<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_fotos">

    <fragment
        android:id="@+id/nav_fotos"
        android:name="com.chema.eventoscompartidos.fragment.OpinionFotoFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_opinion_foto" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.chema.eventoscompartidos.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.chema.eventoscompartidos.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>