<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <EditText
        android:id="@+id/ed_txt_userName_signUp"
        android:layout_width="366dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        android:paddingStart="4dp"
        android:paddingLeft="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <EditText
        android:id="@+id/ed_txt_email_signUp"
        android:layout_width="366dp"
        android:layout_height="55dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/email"
        android:paddingStart="4dp"
        android:paddingLeft="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <EditText
        android:id="@+id/ed_txt_pwd_signUp"
        android:layout_width="366dp"
        android:layout_height="55dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:paddingStart="4dp"
        android:paddingLeft="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34" />

    <EditText
        android:id="@+id/ed_txt_pwd2_signUp"
        android:layout_width="366dp"
        android:layout_height="55dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/repetPassword"
        android:paddingStart="4dp"
        android:paddingLeft="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/ed_txt_phone_signUp"
        android:layout_width="366dp"
        android:layout_height="55dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593" />


    <Button
        android:id="@+id/btn_confirmar_signUp"
        android:layout_width="220dp"
        android:layout_height="68dp"
        android:text="@string/signUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.932" />

    <Button
        android:id="@+id/btn_google_signUp"
        android:layout_width="169dp"
        android:layout_height="57dp"
        android:text="SignUp GOOGLE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />
</androidx.constraintlayout.widget.ConstraintLayout>